welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:9: error: ';' expected but 'else' found.
  else if(a<0 && b<0 && negative==false){
  ^posNeg:14: error: Unmatched closing brace '}' ignored here
 }
 ^